# IotMonitor

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirement.md
alerter/: __init__.py  main.py  notifiers.py  thresholds.py
api/: __init__.py  main.py
collector/: __init__.py  influx_client.py  main.py
common/: __init__.py  messages.py
grafana/dashboards/: environment.json
grafana/provisioning/dashboards/: dashboard.yaml
grafana/provisioning/datasources/: influxdb.yaml
mosquitto/config/: mosquitto.conf
reporter/: __init__.py  main.py
scripts/: start_demo.sh
sensor/: __init__.py  config.py  sensor_main.py  simulator.py
tests/: conftest.py  test_alerter_main.py  test_api.py  test_notifiers.py  test_reporter.py  test_simulator.py  test_thresholds.py
