[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "IotMonitor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.0.0",
    "influxdb-client>=1.40.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.0",
    "python-dotenv>=1.0.0",
    "smbus2>=0.4.3",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["common*", "sensor*", "collector*", "alerter*", "reporter*", "api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
